Создано с помощью Colaboratory

--- a/read_data.ipynb
+++ b/read_data.ipynb
@@ -23,7 +23,7 @@
         "outputId": "991c2c84-b97a-4fbc-c52a-4a64075000c3"
       },
       "id": "lSdHmQ3Nqw5N",
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -76,7 +76,7 @@
         "id": "7nFms0WjrLCr"
       },
       "id": "7nFms0WjrLCr",
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -92,7 +92,7 @@
         "outputId": "a2cb4a6f-03ea-47da-bf83-b1ea336d80fb"
       },
       "id": "XnoPPnTZk6Hw",
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -128,7 +128,7 @@
         "outputId": "955380ff-8317-4a6f-faf2-b23343edb958"
       },
       "id": "97KZgX7AlJ9c",
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1158,7 +1158,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "4c978709",
       "metadata": {
         "colab": {
@@ -1207,12 +1207,12 @@
         "id": "LrugB-pzfKCG"
       },
       "id": "LrugB-pzfKCG",
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "e4a0675c",
       "metadata": {
         "colab": {
@@ -2254,7 +2254,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "d7bc2416",
       "metadata": {
         "colab": {
@@ -2290,7 +2290,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "297d66bf",
       "metadata": {
         "colab": {
@@ -3026,7 +3026,7 @@
         "outputId": "2aee3d8d-5689-47d2-a659-5d4f696cb576"
       },
       "id": "rEUPpWzzfzh2",
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3079,7 +3079,7 @@
         "id": "cj5RwU6rjXMc"
       },
       "id": "cj5RwU6rjXMc",
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3105,7 +3105,7 @@
         "outputId": "ba5e99da-7361-4bdf-c029-736490cf316e"
       },
       "id": "yPi6k4Vork4s",
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3139,7 +3139,7 @@
         "outputId": "a80a438e-03b9-46e5-dbe7-0367824f3326"
       },
       "id": "nueTa-wLuHbr",
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3387,7 +3387,7 @@
         "outputId": "c234938a-dd3b-4dd2-f8cd-1e13513b48da"
       },
       "id": "U1eh08Jguxd5",
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3443,7 +3443,7 @@
         "outputId": "fb755036-fa38-4f56-a86b-f85df0ce5b1c"
       },
       "id": "txWsUU2vjvN4",
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3473,7 +3473,7 @@
         "outputId": "6efdb22a-5f7c-4af2-b7dc-b861476a4d93"
       },
       "id": "c4WWxl3Jzqvy",
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3658,7 +3658,7 @@
         "outputId": "8a4e88ba-b89c-4087-f5c3-e852302c776c"
       },
       "id": "HmpVLcYW1Qib",
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3709,7 +3709,7 @@
         "id": "dBdIn_9WGzNE"
       },
       "id": "dBdIn_9WGzNE",
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3732,7 +3732,7 @@
         "outputId": "13c26f0f-23ce-4c9e-dd09-c1ca0c6d4486"
       },
       "id": "yGjNmX92G8JF",
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3767,7 +3767,7 @@
         "id": "owEqNSpwlRh8"
       },
       "id": "owEqNSpwlRh8",
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3790,7 +3790,7 @@
         "outputId": "aefaa1de-461a-4445-a227-3697ce319d9f"
       },
       "id": "UaMwolarlbPz",
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3845,7 +3845,7 @@
         "id": "6Kz4JfJQnIUB"
       },
       "id": "6Kz4JfJQnIUB",
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3862,7 +3862,7 @@
         "outputId": "4d5a2537-0cc5-43a3-e199-a0bfdb2b6a50"
       },
       "id": "vFRt6FF2f7Be",
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4075,7 +4075,7 @@
         "outputId": "b67bb44c-2755-480e-9a79-d74944bb4e28"
       },
       "id": "5Z_lZNnJn4xX",
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4110,7 +4110,7 @@
         "id": "_6TWa966oc6D"
       },
       "id": "_6TWa966oc6D",
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4122,7 +4122,7 @@
         "id": "_fKvV1DooVrk"
       },
       "id": "_fKvV1DooVrk",
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4139,7 +4139,7 @@
         "outputId": "d105322d-17df-406b-8782-2b64f1fd723f"
       },
       "id": "MqvonrZZolwO",
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4169,7 +4169,7 @@
         "outputId": "8b22df40-0d9b-4c58-fb2f-ea9212ad2069"
       },
       "id": "2B479vxvXNW7",
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4209,7 +4209,7 @@
         "outputId": "bc2e3d0f-49a3-408c-c365-51d429a70626"
       },
       "id": "nHH-kYEsYTfd",
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4259,7 +4259,7 @@
         "outputId": "c74d52d4-2768-4bbc-8ec9-e4c16bdc9ce1"
       },
       "id": "nrSZN3m4RhQq",
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4299,7 +4299,7 @@
         "outputId": "356a1704-35e0-44b7-d0ee-2476f94050e6"
       },
       "id": "LFNuUtQ6pq-j",
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4339,7 +4339,7 @@
         "outputId": "293716b0-426e-4eba-b749-a5e8ea1aff93"
       },
       "id": "UJRsZEzZqC4w",
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4399,7 +4399,7 @@
         "outputId": "bb4ddaaf-1723-4404-b413-d0ed60149228"
       },
       "id": "Pz8CIZZCrkGx",
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4517,7 +4517,7 @@
         "id": "6EYcz8SfsGZf"
       },
       "id": "6EYcz8SfsGZf",
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4534,7 +4534,7 @@
         "outputId": "aefaa000-e4f7-4186-9eef-bcb399a3a79c"
       },
       "id": "U5-JbZrlfJ4i",
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4731,7 +4731,7 @@
         "outputId": "b1f73acc-4a44-47d5-9316-c0acd7d7060a"
       },
       "id": "dmpUs0xBfOD-",
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5037,7 +5037,7 @@
         "outputId": "3018f271-2b61-489b-eac7-583fc48cca1e"
       },
       "id": "bCdbR3iKfYqU",
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5152,18 +5152,6 @@
     {
       "cell_type": "code",
       "source": [
-        "#predictions = results.predict(start='2021-03-06', end='2021-04-05', dynamic=False, typ='levels').rename(' SARIMAX(3, 7, 0)x(1, 1, [0], 7) Predictions')"
-      ],
-      "metadata": {
-        "id": "ZNDrfoLwhBDM"
-      },
-      "id": "ZNDrfoLwhBDM",
-      "execution_count": 107,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "start=len(train)\n",
         "end=len(train)+len(test)-1\n",
         "predictions = results.predict(start=start, end=end, dynamic=False, typ='levels').rename(' SARIMAX(3, 7, 0)x(1, 1, [0], 7) Predictions')"
@@ -5172,7 +5160,7 @@
         "id": "XmnWJQBOHNHt"
       },
       "id": "XmnWJQBOHNHt",
-      "execution_count": 128,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5190,7 +5178,7 @@
         "outputId": "09545373-0d4e-4881-ff77-266faefdf44e"
       },
       "id": "qu3ynQKgokRl",
-      "execution_count": 129,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5262,7 +5250,7 @@
         "outputId": "05366b08-a337-40fb-a27a-6c0ca90a0226"
       },
       "id": "Znyl_-niiMF4",
-      "execution_count": 140,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5314,7 +5302,7 @@
         "outputId": "d93744a3-4d41-457d-b819-570435105baa"
       },
       "id": "Aamd-4nRtPQn",
-      "execution_count": 131,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5362,7 +5350,7 @@
         "outputId": "9ded3af7-8434-462c-f62d-08f4f4f32033"
       },
       "id": "ZeAGNGssxyVU",
-      "execution_count": 185,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5474,7 +5462,7 @@
         "id": "1uTHieB5yYjz"
       },
       "id": "1uTHieB5yYjz",
-      "execution_count": 195,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5491,7 +5479,7 @@
         "outputId": "d6d99336-9971-4eaf-e18a-9be6c22979e5"
       },
       "id": "vv_ip1x3PrXY",
-      "execution_count": 196,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5538,7 +5526,7 @@
         "outputId": "e8b2b920-6a6f-4b06-daed-2c8d893360d3"
       },
       "id": "cZs4GNd7yvZ3",
-      "execution_count": 198,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5584,7 +5572,7 @@
         "id": "N_MQgutCiqiT"
       },
       "id": "N_MQgutCiqiT",
-      "execution_count": 199,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5607,7 +5595,7 @@
         "outputId": "bab68f09-ca73-431d-e7aa-b08366d99c63"
       },
       "id": "wqtoOZZqj1fP",
-      "execution_count": 200,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5659,7 +5647,7 @@
         "outputId": "cd2f2552-81eb-4e73-d5a5-752d1008dcf8"
       },
       "id": "xh0pN2WusSD_",
-      "execution_count": 201,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5825,7 +5813,7 @@
         "id": "cGBDoV7OjiCv"
       },
       "id": "cGBDoV7OjiCv",
-      "execution_count": 202,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5883,7 +5871,7 @@
         "outputId": "7c3b333f-d704-4f85-a4f3-78723d8c00fc"
       },
       "id": "aSUXXlv70ygm",
-      "execution_count": 204,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5930,7 +5918,7 @@
         "id": "bBrt7-wL_DUC"
       },
       "id": "bBrt7-wL_DUC",
-      "execution_count": 205,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5947,7 +5935,7 @@
         "outputId": "5fa88401-ba16-410b-e170-131a87785413"
       },
       "id": "frs9UCaMAg3_",
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6381,7 +6369,7 @@
         "outputId": "768e94d3-0fd1-4703-b6b0-fc5b53ad7ecc"
       },
       "id": "67pK_LnGADxy",
-      "execution_count": 206,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6423,7 +6411,7 @@
         "outputId": "aded2f84-0244-4458-cbbc-45c5eaa807d0"
       },
       "id": "6IMsn4Xh5zkR",
-      "execution_count": 207,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6438,7 +6426,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Модель HoltWinters дала ошибку rmse меньше, чем модель ARIMA"
+        "Модель HoltWinters дала ошибку rmse больше, чем модель ARIMA"
       ],
       "metadata": {
         "id": "HlSxNtin6Zj0"
